# my_tool_box

./: README.md
C/cli_template/include/: main_cli_header.h  main_header.h  my_cgetopt.h  my_cmd.h  my_libasm.h  my_parser.h  my_readline.h  my_string.h  my_unistd.h
C/cli_template/src/: main.c
C/cli_template/src/my_cgetopt/: alloc_array.c  count_str_array.c
C/cli_template/src/my_cmd/: my_cmd.c
C/cli_template/src/my_readline/: my_readline.c
C/cli_template/src/my_string/: my_memset.c
C/cli_template/src/my_unistd/: my_getopt.c
C/cli_template/src/non_standard_fn/: count_cmd.c
C/cli_template/src/parsing/: parser.c
C/cli_template_my_readline/: Makefile
C/cli_template_my_readline/include/: my_cgetopt.h  my_parser.h
C/cli_template_my_readline/src/: main.c
C/cli_template_my_readline/src/my_cgetopt/: fill_bool_arr.c  flag_state.c  free_opt.c  init_getopt.c
C/cli_template_my_readline/src/non_standard_fn/: count_cmd.c
C/cli_template_ncurse/: CMakeLists.txt  Dockerfile
C/cli_template_ncurse/include/: main_header.h  my_libasm.h  ncurse_IO.h
C/cli_template_ncurse/src/: main.c
C/cli_template_ncurse/src/my_cgetopt/: flag_parser.c  my_getopt.c
C/cli_template_ncurse/src/my_cmd/: my_cmd.c
C/cli_template_ncurse/src/ncurse_IO/: ncurce_io.c
C/cli_template_ncurse/src/tokenizer/: tokenizer.c
C/hash_and_set/: README.md
C/hash_and_set/include/: my_hash.h  my_set.h
C/hash_and_set/src/: my_hash.c  my_set.c
C/linkedlist/singly/: README.md
C/linkedlist/singly/include/: node_header.h
C/linkedlist/singly/src/: concatenate_llist.c  count_node.c  create_new_node.c  delete_node.c  find_node_at_key.c  find_node_at_pos.c  free_node.c  get_max.c  get_min.c  insert_after_node.c  insert_at_head.c  remove_duplicate_on_node.c  reverse_node_order.c  sort_llist.c  split_node.c  swap.c  test_print_list.c
C/linkedlist/tree/interval_tree/: README.md
C/linkedlist/tree/interval_tree/src/: interval_tree.c
C/my_getopt/include/: my_cgetopt.h  my_libasm.h
C/my_getopt/src/my_c_getopt/: alloc_array.c  count_str_array.c  fill_bool_arr.c  flag_parser.c  flag_state.c  free_opt.c  init_getopt.c  my_getopt.c
C/my_readline/include/: my_readline.h
C/my_readline/src/my_readline/: my_readline.c
C/stack_and_queue/: README.md
C/stack_and_queue/include/: my_queue.h  my_stack.h
C/stack_and_queue/src/: my_stack.c
Dockerstore/cpp_c_nasm/: Dockerfile
Dockerstore/cpp_c_nasm_crow_redispp/: Dockerfile
Dockerstore/openCV_MLIR/: Dockerfile
Makefiles/C_classic_clang/: Makefile
Makefiles/C_nasm_clang/: Makefile
Makefiles/C_nasm_lib_clang/: Makefile
cpp/cli_template_my_readline_cpp_basic/include/: main_CLI_header.h  my_cmd.h
cpp/cli_template_my_readline_cpp_basic/src/: main.cpp
cpp/cli_template_my_readline_cpp_basic/src/my_cgetopt/: count_str_array.c  fill_bool_arr.c  flag_parser.c  flag_state.c  free_opt.c
cpp/cli_template_my_readline_cpp_update/src/: main.cpp
cpp/cli_template_ncurse_cpp/: CMakeLists.txt  Dockerfile
cpp/cli_template_ncurse_cpp/cmake/: pkg-config.pc.in
cpp/cli_template_ncurse_cpp/include/: main_CLI_header.h  main_header.hpp  my_cgetopt.h  my_cmd.h  my_libasm.h  ncurse_IO.h  non_standard_header.h
cpp/cli_template_ncurse_cpp/src/: main.cpp
cpp/cli_template_ncurse_cpp/src/my_cgetopt/: alloc_array.c  init_getopt.c  my_getopt.c
cpp/cli_template_ncurse_cpp/src/my_cmd/: my_cmd.c
cpp/cli_template_ncurse_cpp/src/ncurse_IO/: ncurce_io.c
cpp/cli_template_ncurse_cpp/src/tokenizer/: tokenizer.c
cpp/cli_template_ncurse_cpp/tests/: curse_IO_test.cc
cpp/lexer_parser_exec/include/: zz00_my_main_lang.hpp  zz01_my_lang_param.hpp  zz02_my_syntax.hpp  zz03_my_lexer.hpp  zz03_my_syntax.hpp  zz05_my_executor.hpp
cpp/lexer_parser_exec/src/lx_ps_ex/: zz03_lexer.cpp  zz04_parser.cpp  zz05_executor.cpp
cpp/threadpool/include/: threadpool.hpp
cpp/threadpool/src/: threadpool.cpp
ruby/: README.md
